tests/baselines/reference/collisionSuperAndLocalFunctionInAccessors.errors.txt
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(4,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(9,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(15,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(16,18): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(20,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(21,18): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(26,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(28,22): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(33,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts(35,22): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.


==== tests/cases/compiler/collisionSuperAndLocalFunctionInAccessors.ts (10 errors) ====
    function _super() { // No error
    }
    class Foo {
        get prop1(): number {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            function _super() { // No error
            }
            return 10;
        }
        set prop1(val: number) {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            function _super() { // No error
            }
        }
    }
    class b extends Foo {
        get prop2(): number {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            function _super() { // Should be error
                     ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
            return 10;
        }
        set prop2(val: number) {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            function _super() { // Should be error
                     ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
        }
    }
    class c extends Foo {
        get prop2(): number {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var x = () => {
                function _super() { // Should be error
                         ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
                }
            }
            return 10;
        }
        set prop2(val: number) {
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var x = () => {
                function _super() { // Should be error
                         ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
                }
            }
        }
    }